--- a/streams/walbrook/css/_variables.css
+++ b/streams/walbrook/css/_variables.css
@@ -248,6 +248,7 @@ color-scheme: light dark;
 --crm-input-label-font: var(--crm-font-bold);
 --crm-input-label-size: var(--crm-font-size);
 --crm-input-label-width: var(--crm-big-input);
+--crm-input-label-align: right;
 --crm-input-description: var(--crm-c-gray-700);
 --crm-input-dropdown-icon: "\f107";
 --crm-input-radio-color: var(--crm-c-primary);
